# capsule

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cargo-publish-ckb-testtool.yml  cargo-publish.yml  publish.yml  rust.yml
crates/tests/: Cargo.toml
crates/tests/src/: capsule.rs  testtool.rs
crates/tests/test-contract/: Cargo.toml  Cross.toml  README.md  capsule.toml  deployment.toml
crates/tests/test-contract/contracts/test-contract/: Cargo.toml
crates/tests/test-contract/contracts/test-contract/src/: entry.rs  main.rs
crates/tests/test-contract/tests/: Cargo.toml
crates/tests/test-contract/tests/src/: lib.rs
crates/testtool/: Cargo.toml
crates/testtool/src/: builtin.rs  context.rs  lib.rs  tests.rs  tx_verifier.rs
dev-tools/: integration-tests.sh  package.sh  signing-secret.asc.enc
docker/: Dockerfile
src/: checker.rs  config.rs  config_manipulate.rs  debugger.rs  lib.rs  main.rs  project_context.rs  setup.rs  signal.rs  tester.rs  util.rs  version.rs
src/debugger/: mod.rs  transaction.rs
src/deployment/: deployment_process.rs  manage.rs  mod.rs  plan.rs  recipe.rs  tx_check.rs
src/generator/: mod.rs
src/recipe/: c.rs  lua.rs  mod.rs  rust.rs
src/util/: cli.rs  docker.rs  git.rs  mod.rs
src/wallet/: collector.rs  mod.rs  password.rs  rpc.rs  util.rs  wallet.rs
src/wallet/cli_types/: address.rs  human_capacity.rs  live_cell.rs  live_cell_info.rs  mod.rs  network_type.rs  signature.rs
templates/: .gitignore  Cargo-manifest.toml  README.md  capsule.toml
templates/c/: Makefile
templates/c/sharedlib/contract/: BUILD  example.c
templates/debugger/: template.json
templates/lua/: Makefile
templates/lua/embedded/contract/: BUILD  Cargo.toml
templates/lua/embedded/contract/src/: tests.rs
templates/lua/sharedlib/contract/: BUILD  build.rs  example.c
templates/lua/sharedlib/contract/src/: tests.rs
templates/lua/standalone/contract/: BUILD  Cargo.toml  build.rs
templates/lua/standalone/contract/src/: lib.rs  tests.rs
templates/rust/: .gitignore  Cargo.toml  Makefile  README.md  capsule.toml  deployment.toml  linker.ld
templates/rust/contract/: Cargo-manifest.toml  Cargo.toml
templates/rust/contract/src/: entry.rs  error.rs  main.rs
templates/rust/tests/: Cargo-manifest.toml  Cargo.toml
templates/rust/tests/src/: lib.rs  tests.rs
tests/: Cargo.toml
tests/src/: main.rs  testtool.rs
tests/test-contract/tests/: Cargo.toml
tests/test-contract/tests/src/: tests.rs
