[package]
name = "ckb-capsule"
version = "0.4.6"
authors = ["Nervos Network"]
edition = "2018"
license = "MIT"
description = "Capsule is a development framework for creating smart contract for Nervos' CKB layer 1 blockchain."
homepage = "https://github.com/nervosnetwork/capsule"

[features]
default = []
strict-check = []

[dependencies]
anyhow = "1.0"
tera = "1.2"
lazy_static = "1.4"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
toml_edit = "0.1.5"
ckb-tool = "0.3"
simple-jsonrpc-client = "0.1"
bech32 = "0.6"
secp256k1 = "0.20"
serde_json = "1.0"
chrono = "0.4"
rpassword = "4.0"
serde_yaml = "0.8.11"
users = "0.10"
clap = "2.33"
ctrlc = "3.1"
env_logger = "0.7"
log = "0.4"
faster-hex = "0.4"
phf = "0.8"
includedir = "0.6"

[build-dependencies]
includedir_codegen = "0.6"

[workspace]
members = [
    "tests",
]
