[package]
name = "tests"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ckb-tool = { git = "https://github.com/jjyr/ckb-tool.git", branch = "master" }
