[package]
name = "ckb-testtool"
version = "0.10.0"
authors = ["Nervos Network"]
edition = "2021"
license = "MIT"
description = "CKB contract testing tools"
repository = "https://github.com/nervosnetwork/capsule"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-always-success-script = "0.0.1"
rand = "0.8"
lazy_static = "1.4"
ckb-chain-spec = "0.111.0"
ckb-types = "0.111.0"
ckb-error = "0.111.0"
ckb-script = "0.111.0"
ckb-hash = "0.111.0"
ckb-jsonrpc-types = "0.111.0"
ckb-crypto = "0.111.0"
ckb-resource = "0.111.0"
ckb-verification = "0.111.0"
ckb-traits = "0.111.0"
