[package]
name = "ckb-testtool"
version = "0.10.2"
authors = ["Nervos Network"]
edition = "2021"
license = "MIT"
description = "CKB contract testing tools"
repository = "https://github.com/nervosnetwork/capsule"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-always-success-script = "0.0.1"
rand = "0.8"
lazy_static = "1.4"
ckb-chain-spec = "0.112.1"
ckb-types = "0.112.1"
ckb-error = "0.112.1"
ckb-script = "0.112.1"
ckb-hash = "0.112.1"
ckb-jsonrpc-types = "0.112.1"
ckb-crypto = "0.112.1"
ckb-resource = "0.112.1"
ckb-verification = "0.112.1"
ckb-traits = "0.112.1"
ckb-mock-tx-types = "0.112.1"
